--- a/demo/cba-todo/cba-todo-web/public/index.html
+++ b/demo/cba-todo/cba-todo-web/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="https://raw.githubusercontent.com/hal-wang/cloudbase-access/main/logo.png"
-    />
+    <link rel="icon" href="https://blog.hal.wang/imgs/cba.png" />
     <script src="/_init_tcb-env.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
